--- a/src/manifest.json
+++ b/src/manifest.json
@@ -20,6 +20,14 @@
     ],
     "persistent": false
   },
+  "content_scripts": [
+    {
+      "matches": [
+        "https://etk.srail.kr/hpg/hra/01/selectScheduleList.do?pageId=TK0101010000"
+      ],
+      "js": ["js/content-script.js"]
+    }
+  ],
   "browser_action": {
     "default_popup": "popup.html",
     "default_title": "__MSG_extName__",
@@ -29,7 +37,6 @@
     }
   },
   "options_ui": {
-    "page": "options.html",
-    "browser_style": true
+    "page": "options.html"
   }
 }
